Improved webpack config and first components

--- a/client/package.json
+++ b/client/package.json
@@ -33,8 +33,9 @@
     "webpack-dev-server": "^3.1.10"
   },
   "dependencies": {
+    "prop-types": "^15.7.2",
     "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react-dom": "npm:@hot-loader/react-dom",
     "react-router-dom": "^4.3.1",
     "styled-components": "^4.1.3"
   }
