--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -7,13 +7,6 @@
         "browser": true,
         "es6": true
     },
-    "parserOptions": {
-        "ecmaFeatures": {
-            "experimentalObjectRestSpread": true,
-            "jsx": true
-        },
-        "sourceType": "module"
-    },
     "plugins": [
         "import"
     ],
@@ -27,6 +20,12 @@
         "quotes": [
             "error",
             "single"
-        ]
+        ],
+        "jsx-a11y/label-has-associated-control": [ 2, {
+            "labelComponents": ["CustomInputLabel"],
+            "labelAttributes": ["label"],
+            "controlComponents": ["CustomInput"],
+            "depth": 3
+        }]
     }
 }
