--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "concurrently": "^4.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.12.4",
+    "mongoose": "^5.4.19",
     "npm-run-all": "^4.1.5"
   }
 }
