--- a/server/package.json
+++ b/server/package.json
@@ -12,7 +12,10 @@
   "author": "tiruri",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.16.3",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.0",
     "morgan": "^1.9.0"
   },
   "devDependencies": {
