--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -7,6 +7,13 @@
         "browser": true,
         "es6": true
     },
+    "parserOptions": {
+        "ecmaFeatures": {
+            "experimentalObjectRestSpread": true,
+            "jsx": true
+        },
+        "sourceType": "module"
+    },
     "plugins": [
         "import"
     ],
