--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "file-loader": "^3.0.1",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
-    "react-hot-loader": "^4.3.11",
+    "react-hot-loader": "^4.8.4",
     "rimraf": "^2.6.3",
     "webpack": "^4.23.1",
     "webpack-cli": "^3.1.2",
@@ -34,8 +34,8 @@
   },
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-dom": "npm:@hot-loader/react-dom",
+    "react": "^16.8.6",
+    "react-dom": "npm:@hot-loader/react-dom@^16.8.6",
     "react-router-dom": "^4.3.1",
     "styled-components": "^4.1.3"
   }
