Added linter to the server

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -15,7 +15,8 @@
         "sourceType": "module"
     },
     "plugins": [
-        "import"
+        "import",
+        "html"
     ],
     "rules": {
         "function-paren-newline": ["error", "consistent"],
