--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "uninstall": "rimraf node_modules",
     "clean": "rimraf dist",
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development --open --hot",
+    "start": "webpack-dev-server --config ./webpack/webpack.config.js --mode development --open --hot",
     "build": "webpack --mode production"
   },
   "keywords": [],
