--- a/server/.eslintrc
+++ b/server/.eslintrc
@@ -1,10 +1,12 @@
 {
-  "env": {
-    "node": true
+  "extends": "airbnb",
+  "plugins": [
+    "react",
+    "jsx-a11y",
+    "import"
+  ],
+  "rules": {
   },
-  "settings": {
-    "import/resolver": {
-      "node": true
-    }
+  "env": {
   }
 }
