--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "uninstall": "rimraf node_modules",
-    "start": "nodemon src/app.js --exec babel-node --presets env",
-    "build": "babel src -d dist --source-maps inline --copy-files",
+    "start": "nodemon src/app.js --exec babel-node --presets @babel/preset-env",
+    "build": "babel-node --presets @babel/preset-env src -d dist --source-maps inline --copy-files",
     "serve": "node dist/app.js"
   },
   "author": "tiruri",
