--- a/client/package.json
+++ b/client/package.json
@@ -46,7 +46,9 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "npm:@hot-loader/react-dom@^16.8.6",
+    "react-redux": "^7.1.0",
     "react-router-dom": "^4.3.1",
+    "redux": "^4.0.4",
     "styled-components": "^4.1.3"
   }
 }
