--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "express": "^4.16.3",
     "joi": "^14.3.1",
     "jsonwebtoken": "^8.5.0",
+    "mongoose": "^5.6.5",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0"
