--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "uninstall": "rimraf node_modules",
     "start": "nodemon src/app.js --exec babel-node --presets @babel/preset-env",
-    "build": "babel-node --presets @babel/preset-env src -d dist --source-maps inline --copy-files",
+    "build": "babel --presets @babel/preset-env src -d dist --source-maps inline --copy-files",
     "serve": "node dist/app.js"
   },
   "author": "tiruri",
@@ -23,8 +23,8 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
-    "@babel/core": "^7.2.2",
-    "@babel/node": "^7.2.2",
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
     "@babel/preset-env": "^7.3.1",
     "eslint": "5.3.0",
     "eslint-config-airbnb": "17.1.0",
